--- a/rebar.config
+++ b/rebar.config
@@ -6,7 +6,7 @@
   {snappy, "", {git, "https://github.com/rpt/snappy.git"}},
   {lz4, "", {git, "https://github.com/szktty/erlang-lz4.git"}},
   {proper, "", {git, "https://github.com/manopapad/proper.git"}},
-  {folsomite, ".*", {git, "git://github.com/puzza007/folsomite.git"}},
-  {quintana, ".*", {git, "https://github.com/puzza007/quintana.git"}}]}.
+  {folsomite, ".*", {git, "git://github.com/puzza007/folsomite.git", {tag, "1.2.5"}}},
+  {quintana, ".*", {git, "https://github.com/puzza007/quintana.git", {tag, "0.1.3"}}}]}.
 
 {cover_enabled, true}.
